# am2-aprendizaje-maquina-ii

./: .gitignore  README.md  main.py  pyproject.toml
actividad1_metodos_kernel/: metodos_kernel_actividad.ipynb
actividad2_perceptron/: perceptron_multicapa_actividad.ipynb
data/: cfpb_features.parquet
proyecto1_cfpb/: proyecto1_cfpb.ipynb
proyecto1_heart_disease/: proyecto1_identificacion_problema.ipynb
referencia/: U1_ingesta_analisisexploratorio 1.ipynb
